Fix mini prev/next page links
* Arrows will never overlap main navigation
* Arrows shouldn't be rendered on top of Gitter chat window
* Get rid of absolute positioning

Fixes #103

--- a/styles/components/_nav.scss
+++ b/styles/components/_nav.scss
@@ -6,8 +6,12 @@ $line-height: 3px;
   left: 0;
   right: 0;
   z-index: 100;
+  display: flex;
+  align-items: center;
+  background-color: #fff;
   @include media-query(palm) {
     position: fixed;
+    background-color: transparent;
     // Ignore pointer events when the menu is positioned off screen
     pointer-events: none;
   }
@@ -34,9 +38,13 @@ $line-height: 3px;
   }
 }
 
+.nav__items {
+  margin: 0;
+  padding: 0;
+}
+
 .nav__link,
-.nav__toggle-label,
-.nav__selected__link {
+.nav__toggle-label {
   z-index: 10000;
   text-transform: uppercase;
   letter-spacing: 4px;
@@ -46,27 +54,15 @@ $line-height: 3px;
 }
 .nav__link {
   display: inline-block;
-  padding: $quarter-spacing-unit $base-spacing-unit;
-  transition: color $transition-easing $transition-speed;
-  @include font-size($deci-size);
-  &:hover {
-    color: darken($action-color, 25%);
-  }
-  @include media-query(palm) {
-    text-align: center;
-    width: 100%;
-  }
-}
-.nav__selected__link {
-  display: inline-block;
-  padding: $quarter-spacing-unit $base-spacing-unit;
+  margin: 0;
+  padding: 8px 16px;
   @include font-size($deci-size);
   @include media-query(palm) {
     text-align: center;
     width: 100%;
   }
 }
-.nav__selected__link a {
+.nav__link_selected a {
   color: black;
 }
 .nav__toggle {
