--- a/styles/custom.scss
+++ b/styles/custom.scss
@@ -79,50 +79,7 @@ hr {
   display: inline;
 }
 
-.previous-page,
-.next-page {
-  position: fixed;
-  top: 0.5em;
-  font-family: "Avenir Next", "Helvetica Neue", sans-serif;
-  text-transform: uppercase;
-  text-rendering: optimizeLegibility;
-  z-index: 199;
-}
-.previous-page {
-  left: 1em;
-}
-.next-page {
-  right: 1em;
-}
-
-@media (max-width: 1150px) {
-  .next-page,
-  .previous-page {
-    // hide next/prev on smaller resolutions for now
-    border: none;
-  }
-}
 @include media-query(portable) {
-  .prevnext-pages {
-    position: inherit;
-    height: auto;
-    top: auto;
-    left: auto;
-    right: auto;
-  }
-
-  .next-page,
-  .previous-page {
-    padding: 0.1em;
-    background: white;
-    top: inherit;
-    bottom: 0.5em;
-    max-width: 40%;
-
-    // hide next/prev on mobile for now
-    border: none;
-  }
-
   #disqus_thread {
     margin: 1em;
   }
